adjust alignment issues

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<iframe frameborder="0" src="https://googlecloud.looker.com/embed/dashboards/226?Log%20Search=%22r%5C%22.*%2F(.*%5C%5C.html).*%5C%22%22&filter_config=%7B%22Log%20Search%22:%5B%7B%22type%22:%22%3D%22,%22values%22:%5B%7B%22constant%22:%22r%5C%22.*%2F(.*%5C%5C.html).*%5C%22%22%7D,%7B%7D%5D,%22id%22:1%7D%5D%7D" name="looker-frame" id ="looker-frame"></iframe>
 	</div>
 	
-	<div class="sidebar-right">&nbsp;</div>
+	<div class="sidebar-right"></div>
 
 </div>
 
