use a viz for initial placeholder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="sidebar-left">
 		<form id="form-search" action="">
 			<div class="search">
-				<p><label for="search-box">RegEx for Search</label></p>
+				<p><label for="search-box">RegEx for Log Search</label></p>
 				<input id="search-box" name="search-box" type="text" maxlength="255" value="" /><br />
 				<input id="btn-clear" class="pure-button" type="button" value="Clear">
 				<input id="btn-run" class="pure-button" type="submit" name="submit" value="Run" />
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="center-embed">
-		<iframe frameborder="0" src="https://googlecloud.looker.com/embed/dashboards/226?Log%20Search=%22r%5C%22.*%2F(.*%5C%5C.html).*%5C%22%22&filter_config=%7B%22Log%20Search%22:%5B%7B%22type%22:%22%3D%22,%22values%22:%5B%7B%22constant%22:%22r%5C%22.*%2F(.*%5C%5C.html).*%5C%22%22%7D,%7B%7D%5D,%22id%22:1%7D%5D%7D" name="looker-frame" id ="looker-frame"></iframe>
+		<iframe frameborder="0" src="https://googlecloud.looker.com/embed/looks/1327" name="looker-frame" id ="looker-frame"></iframe>
 	</div>
 	
 	<div class="sidebar-right"></div>
